[package]
name = "tln_sysinfo"
version = "0.1.0"
edition = "2021"

[lib]
name = "tln_sysinfo"
crate-type = ["cdylib"]

[dependencies]
anstream = "0.6.15"
crossbeam-channel = "0.5.13"
chrono = "0.4.38"
owo-colors = "4.1.0"
readable = "0.16.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.31.4"

common = { path = "../common" }
